--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,36 +1,81 @@
-<!DOCTYPE HTML>
-<html xmlns="http://www.w3.org/1999/html">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title> Input Page </title>
+    <link rel="stylesheet" type="text/css" href="/css/semantic.min.css">
 
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
 
-<header>Input Page</header>
-<br/>
-<form action="result" method="GET">
 
-
+<form action="result" method="POST">
     <label for="statuses">Statuses</label>
     <br/>
 
-    <input type="text" id="statuses" name="statuses"
-           placeholder="Input Statuses"/>
+    <div class="ui fluid multiple search selection dropdown" id="first">
+        <input type="hidden" id="statuses" name="statuses" >
+        <i class="dropdown icon"></i>
+        <div class="default text">Select statuses.</div>
+        <div class="menu">
+            <div th:each="statuses : ${statusesArrayList}" class="item" th:data-value="${statuses}">
+                <text th:text="${statuses}"/>
+            </div>
+        </div>
+    </div>
 
+    <label for="activityTypes">Activity types</label>
     <br/>
-    <label for="activity_types">Activity Types</label>
-    <br/>
 
-    <input type="text" id="activity_types" name="activity_types"
-           placeholder="Input Activity Types"/>
-
-    <br/>
-    <br/>
-
-
+    <div class="ui fluid multiple search selection dropdown"  id="second">
+        <input type="hidden" id="activityTypes" name="activityTypes">
+        <i class="dropdown icon"></i>
+        <div class="default text">Select activity types. All are selected by default.</div>
+        <div class="menu">
+            <div th:each="activityTypes : ${activityTypesArrayList}" class="item" th:data-value="${activityTypes}">
+                <text th:text="${activityTypes}"/>
+            </div>
+        </div>
+    </div>
     <input type="submit" />
-<!--    value="Submit!"-->
 </form>
 
+
+<script
+        src="https://code.jquery.com/jquery-3.1.1.min.js"
+        integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+        crossorigin="anonymous"></script>
+<script src="/js/semantic.min.js"></script>
+
+<script>
+    $('#first')
+        .dropdown({
+            placeholder: 'Select statuses.',
+            values: [
+                {
+                    name: 'SUCCESS',
+                    value: 'SUCCESS',
+                    selected : true
+                },
+                {
+                    name: 'IN_PROCESS',
+                    value: 'IN_PROCESS',
+                    selected : true
+                },
+                {
+                    name     : 'FAIL',
+                    value    : 'FAIL',
+                    selected : true
+                }
+            ]
+        })
+    ;
+</script>
+
+<script>
+    $('#second')
+        .dropdown()
+    ;
+</script>
 </body>
 </html>
