refactored JsonRestController and DataController Deleted unused html

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -24,6 +24,8 @@
         </div>
     </div>
 
+    <br/>
+
     <label for="activityTypes">Activity types</label>
     <br/>
 
@@ -37,6 +39,19 @@
             </div>
         </div>
     </div>
+    <br/>
+
+    <label for="startDateTime">Start date & time:</label>
+    <br/>
+    <input type="datetime-local" id="startDateTime" name="startDateTime" value="2018-01-01T00:00">
+    <br/>
+
+    <label for="finishDateTime">Finish date & time:</label>
+    <br/>
+    <input type="datetime-local" id="finishDateTime" name="finishDateTime" value="2022-01-01T00:00">
+
+    <br/>
+
     <input type="submit" />
 </form>
 
